--- a/Avhrm.UI.Shared/compilerconfig.json
+++ b/Avhrm.UI.Shared/compilerconfig.json
@@ -1,10 +1,9 @@
 ﻿[
   {
     "inputFile": "wwwroot/styles/Site.scss",
-    "outputFile": "wwwroot/styles/Site.css"
-  },
-  {
-    "inputFile": "wwwroot/scripts/Site.js",
-    "outputFile": "wwwroot/scripts/Site.min.js"
+    "outputFile": "wwwroot/styles/Site.css",
+    "minify": {
+      "enabled": true
+    }
   }
 ]
