--- a/Directory.build.props
+++ b/Directory.build.props
@@ -1,4 +1,12 @@
 <Project>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<LangVersion>latest</LangVersion>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	</PropertyGroup>
+	
 	<ItemGroup >
 		<Using Include="System" />
 		<Using Include="System.Linq" />
